# Winnow-fork

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  deploy.sh  pyproject.toml  requirements.txt
.github/workflows/: test.yml
app/: compressor.py  main.py  models.py
benchmarks/: run_gemini_eval.py  run_latency.py  run_squad.py
benchmarks/results/: latency_results.json  squad_results.json  squad_sweep.json
tests/: test_api.py  test_compress.py
website/: .gitignore  package-lock.json  package.json
website/src/app/: globals.css  layout.tsx  page.tsx
website/src/app/benchmarks/: page.tsx
website/src/app/docs/: page.tsx
website/src/app/how-it-works/: page.tsx
website/src/components/: Benchmarks.tsx  CodeSnippets.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  LiveDemo.tsx  Nav.tsx  SelfHost.tsx  TryIt.tsx
website/src/hooks/: useScrollReveal.ts
winnow/: __init__.py  client.py  langchain.py
winnow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
