[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "winnow-compress"
version = "0.2.7"
description = "Free open-source RAG compression middleware. Drop-in API for LLM pipelines."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.1.0"]
dev = ["pytest", "pytest-asyncio", "httpx"]

[project.urls]
Homepage = "https://github.com/itsaryanchauhan/Winnow"
Documentation = "https://github.com/itsaryanchauhan/Winnow#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["winnow*"]
